# zk-halo2

./: Cargo.toml
benchmarking/: Cargo.toml  README.md
benchmarking/src/: constants.rs  fib_benches.rs  lib.rs  residue_pattern_benches.rs
examples/: Cargo.toml  README.md
examples/src/: add.rs  challenge.rs  lib.rs  mul.rs  residue_pattern.rs
fib/: Cargo.toml
fib/src/: fib1.rs  fib2.rs  lib.rs
residue_pattern/: Cargo.toml  README.md
residue_pattern/src/: lib.rs  residue_pattern.rs
src/: lib.rs
